crates/edgedb_codegen/tests/compile/macros/invalid_query_file.stderr
error: failed to read query file at $WORKSPACE/target/tests/trybuild/edgedb_codegen/queries/invalid.edgeql: No such file or directory (os error 2)
 --> tests/compile/macros/invalid_query_file.rs:4:16
  |
4 |     edgedb_query!(invalid);
  |                   ^^^^^^^
