crates/edgedb_codegen/tests/compile/macros/invalid_query_file.rs
use edgedb_codegen::edgedb_query;

fn main() {
	edgedb_query!(invalid);
}
